syntax = "proto3";

package bytebase.store;

import "store/common.proto";

option go_package = "generated-go/store";

message InstanceChangeHistoryPayload {
  ChangedResources changed_resources = 1;
}

message ChangedResources {
  repeated ChangedResourceDatabase databases = 1;
}

message ChangedResourceDatabase {
  string name = 1;

  repeated ChangedResourceSchema schemas = 2;
}

message ChangedResourceSchema {
  string name = 1;

  repeated ChangedResourceTable tables = 2;
}

message ChangedResourceTable {
  string name = 1;

  // estimated row count of the table
  int64 table_rows = 2;

  // The ranges of sub-strings correspond to the statements on the sheet.
  repeated Range ranges = 3;
}
